photos scrollbar fixes

--- a/style.css
+++ b/style.css
@@ -473,6 +473,10 @@ button {
   padding: 48px 0px 60px 35px;
 }
 
+.our-team .container {
+  padding-right: 0;
+}
+
 .our-team-card-wrapper {
   display: flex;
   column-gap: 26px;
@@ -706,6 +710,10 @@ button {
 
   .our-products-wrapper {
     margin-block: 40px;
+  }
+
+  .our-products .container {
+    padding-right: 0;
   }
 
   .our-product-logo img {
